added templates for homepage

--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -1,1 +1,9 @@
-todo
+<!--index.html-->
+
+<!--Embed the header.html template at this location-->
+{{ template "header.html" .}}
+
+<h1>Hello world!</h1>
+
+<!--Embed the footer.html template at this location-->
+{{ template "footer.html" .}}
