--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -3,7 +3,7 @@
 <!--Embed the header.html template at this location-->
 {{ template "header.html" .}}
 
-<h1>Hello world!</h1>
+<img src="{{ .video_url }}">
 
 <!--Embed the footer.html template at this location-->
 {{ template "footer.html" .}}
