--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -12,7 +12,7 @@
     <input type="password" name="password" placeholder="password">
     <input type="submit">
 </form>
-<h2><a href="/signup">signup</a></h2>
+<h2><a href="/signin">signin</a></h2>
 
 </body>
 </html>
