--- a/templates/createAccount.gohtml
+++ b/templates/createAccount.gohtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Reset Password</title>
+    <title>Create Account</title>
     <!-- Hacked this from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
     <!-- Required meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -23,12 +23,12 @@
             <img src="/public/images/favicon.ico" class="img-responsive" alt="" />
             <br><br>
             <form method="post" action="#" role="login">
+                <input type="email" name="userid" placeholder="Email" required class="form-control input-lg" />
                 <input type="password" name="password" id="password" placeholder="Password" required class="form-control input-lg"/>
+                <input type="text" name="first" id="first" placeholder="First" required class="form-control input-lg"/>
+                <input type="text" name="last" id="last" placeholder="Last" required class="form-control input-lg"/>
                 <br>
-                <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Reset Password</button>
-                <div>
-                    <a href="/index">Home</a>
-                </div>
+                <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Create Account</button>
             </form>        
         </section>  
         </div>
