--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -17,7 +17,8 @@
     PASSWORD {{.Password}}<br>
     LOGGED IN {{.LoggedIn}}<br>
     {{if .LoggedIn}}
-    <h2><a href="/logout">logout</a></h2>
+    <h2><a href="/logout">Logout</a></h2>
+    <h2><a href="/resetPassword">Reset Password</a></h2>
     {{else}}
     <h2><a href="/login">login</a></h2>
     {{end}}
