--- a/templates/createAccount.gohtml
+++ b/templates/createAccount.gohtml
@@ -3,43 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Account</title>
-    <!-- Hacked this from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
-    <!-- Required meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    {{ template "bootstrapHeader.gohtml" }}    
 </head>
 <body>
-
-    <!--
-    Hacked this from https://bootsnipp.com/snippets/featured/password-strength-meter
-    -->
-    <div class="container">  
-    <div class="row" id="pwd-container">
-        <div class="col-md-4"></div>    
-        <div class="col-md-4">
-        <section class="login-form">
-            <br>
-            <img src="/public/images/favicon.ico" class="img-responsive" alt="" />
-            <br><br>
-            <form method="post" action="#" role="login">
-                <input type="email" name="userid" placeholder="Email" required class="form-control input-lg" />
-                <input type="password" name="password" id="password" placeholder="Password" required class="form-control input-lg"/>
-                <input type="text" name="first" id="first" placeholder="First" required class="form-control input-lg"/>
-                <input type="text" name="last" id="last" placeholder="Last" required class="form-control input-lg"/>
-                <br>
-                <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Create Account</button>
-            </form>        
-        </section>  
-        </div>
-    </div>
-    </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+    {{ template "createAccountContent" }}
+    {{ template "bootstrapFooter.gohtml" }}
 </body>
 </html>
+
+{{ define "createAccountContent" }}
+<div class="container">  
+<div class="row" id="pwd-container">
+    <div class="col-md-4"></div>    
+    <div class="col-md-4">
+    <section class="login-form">
+        <br>
+        <img src="/public/images/favicon.ico" class="img-responsive" alt="" />
+        <br><br>
+        <form method="post" action="#" role="login">
+            <input type="email" name="userid" placeholder="Email" required class="form-control input-lg" />
+            <input type="password" name="password" id="password" placeholder="Password" required class="form-control input-lg"/>
+            <input type="text" name="first" id="first" placeholder="First Name" required class="form-control input-lg"/>
+            <input type="text" name="last" id="last" placeholder="Last Name" required class="form-control input-lg"/>
+            <br>
+            <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Create Account</button>
+            <div>
+                <a href="/login">Login</a>
+            </div>
+        </form>        
+    </section>  
+    </div>
+</div>
+</div>
+{{ end }}
